<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">益呼吸</string>
    <string name="login_title">自己和家人的家庭空气站!</string>
    <string name="action_quit">注销</string>
    <string name="hello_world">Hello world!</string>
    <string name="loginiAirTitle">登录益呼吸</string>
    <string name="dialog_account">用户名/邮箱/手机</string>
    <string name="dialog_password">密码</string>
    <string name="dialog_remember">记住账号密码</string>
    <string name="sign_in">登 录</string>
    <string name="go_sign">去注册</string>
        <string name="thirdPartLoginPrompt">社交账号登录</string>
    <string name="sinaPrompt">新浪微博</string>
    <string name="qqPrompt">腾讯QQ</string>
    
     <string name="popwin_add_city">添加城市</string>
      <string name="popwin_add_device">添加小新</string>
      
     <string name="popwin_broad">公告</string>
      <string name="popwin_setting">设置</string>
       <string name="pull_to_refresh_pull_label">下拉刷新…</string>
  <string name="pull_to_refresh_release_label">放开以刷新…</string>
  <string name="pull_to_refresh_refreshing_label">正在载入…</string>

    <!-- Just use standard Pull Down String when pulling up. These can be set for languages which require it -->
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>

    
    <string name="change_city_activity_title">城市管理</string>
    <string name="weather_city_alreadyadded">城市“%s”已添加</string>
    <string name="choose_city_activity_title">添加城市</string>
    <string name="clockweather_citymanage_resetdefault">您删除了默认城市，重新设置为“%s”</string>
    <string name="no_data">暂无数据</string>
    <string name="weather_detail_top_bar_city">城市</string>
    <string name="city_mgr_set_city_default">设为默认</string>
    <string name="drag_tip">长按城市，可拖动改变城市顺序及删除城市</string>
    <string name="removeItem">删除</string>
    
    <string name="temperature_with_oc">-2~6°C</string>
    
    <string name="change_device_activity_title">小新管理</string>
    <string name="device_drag_tip">长按小新，可拖动改变小新顺序及删除小新</string>
    <string name="add_device_activity_title">添加小新</string>
    <string name="modify_device_activity_title">修改小新</string>
    <string name="bind_device_activity_title">绑定小新</string>
    <string name="main_list_column_city">城市/家</string>
    <string name="main_list_column_pm25">PM2.5</string>
    <string name="main_list_column_form">甲醛</string>
    
    <string name="main_list_column_temp">温度</string>
    <string name="main_list_column_humi">湿度</string>
    
    <string name="detail_activity_title">小新家</string>
    
    <string name="broad_dialog_text_title">我要添加公告</string>
    <string name="broad_dialog_text_hint_content">请输入公告内容(限80字以内)</string>
    <string name="broad_dialog_text_hint_grey" />
    <string name="cancel_str">取消</string>
    <string name="confirm_send">发表</string>
           
    <string name="setting_main_title">设置</string>
    <string name="gps_setting_title">GPS 定位</string>
    <string name="anim_setting_title">天气动画</string>
    <string name="background_setting_title">更换天气壁纸</string>
    <string name="skin_setting_title">天气小工具换肤</string>
    <string name="skin_setting_sum">只支持4*2天气小工具的换肤</string>
    <string name="skin_setting_success">时钟天气皮肤设置成功!</string>
    <string name="auto_update_setting_title">自动更新天气</string>
    <string name="notification_weather_setting_title">通知栏天气</string>
    <string name="notification_alert_setting_title">通知栏预警</string>
    <string name="life_info_setting_title">生活信息个性设定</string>
    <string name="check_update_setting_title">检查更新</string>
    <string name="check_update_setting_sum">当前版本： V%s</string>
    <string name="feedback_setting_title">意见反馈</string>
    <string name="about_setting_title">关于</string>
    <string name="weather_source_setting_title">数据来源：中国天气网</string>
    
       <string name="voice_alarm">定时语音播报</string>
       
           <string name="wallpaper_setting_title">桌面动态壁纸</string>
       
           <string name="wait_moment">请稍候</string>
       
           <string name="now_loading">正在加载...</string>
       
           <string name="i_known">知道了</string>
       
           <string name="xiaoxin_login_ok">登陆成功</string>
       
           <string name="add_device_ssid">当前网络</string>
           <string name="add_device_pwd">密码</string>
           <string name="add_device_sn">序列号</string>
       
           <string name="add_device_pwd_hint">请输入您的Wi-Fi密码</string>
       
           <string name="add_device_cooldown">开始连接设备 剩余</string>
       
           <string name="setting">设置</string>
       
           <string name="second">秒</string>
       
           <string name="add_device_success">添加成功</string>
       
           <string name="add_device_failed">绑定失败</string>
       
           <string name="button_modify">调节风速</string>
       
           <string name="device_detail_speed">风速:</string>
       
           <string name="device_detail_switch">开关:</string>
           
           <string name="device_detail_network">离线:</string>
           
       
           <string name="detail_device_pm25">PM2.5\t:</string>
       
           <string name="detail_device_temp">温度\t:</string>
       
           <string name="detail_device_humi">湿度\t:</string>
       
           <string name="detail_device_form">甲醛\t:</string>
       
           <string name="add_device_no_wifi">请接入无线网络再添加小新</string>
       
           <string name="please_wait_xiaoxin">点击下一步之前，请确保小新处于等待配置状态。</string>
       
           <string name="sn_number">序列号:</string>
       
           <string name="beijing">北京</string>
       
           <string name="test">测试</string>
       
           <string name="hasnewversion">检测到新版本</string>
       
           <string name="clickupdate">点击安装</string>
       
           <string name="whos_home">的家</string>
       
           <string name="please_select_your_wifi">请选择您常用的Wi-Fi网络</string>
       
           <string name="addnewxiaoxin">添加新小新</string>
       
           <string name="bindexistxiaoxin">绑定已有小新</string>
       
           <string name="xiaoxincreatemode">请选择小新创建模式</string>
    
</resources>
