<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="37.0dip"
    android:background="@color/main_list_functionbar_bg"
    android:orientation="vertical" >



    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/portfolioFunctionBarHeight"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/main_list_column_city"
            android:layout_width="123.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/main_list_column_city"
            android:textColor="@color/mystocks_stocklist_words_color"
            android:textSize="14.0sp"
            />

        <TextView
            android:id="@+id/main_list_column_pm25"
            android:layout_width="123.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/main_list_column_pm25"
            android:textColor="@color/mystocks_stocklist_words_color"
            android:textSize="14.0sp"
            />

        <TextView
            android:id="@+id/main_list_column_temp"
            android:layout_width="123.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/main_list_column_temp"
            android:textColor="@color/mystocks_stocklist_words_color"
            android:textSize="14.0sp"
            />

        <TextView
            android:id="@+id/main_list_column_humi"
            android:layout_width="123.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/main_list_column_humi"
            android:textColor="@color/mystocks_stocklist_words_color"
            android:textSize="14.0sp" />

    </LinearLayout>
            <View
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"

        android:layout_gravity="bottom"
        android:layout_marginLeft="8.0dip"
        android:layout_marginRight="8.0dip"
        android:background="#66ffffff" />

</LinearLayout>