<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:minWidth="@dimen/chart_rect_width"
    android:paddingBottom="12.0dip" >

    <TextView
        android:id="@+id/barrage_hint_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10.0dip"
        android:text="@string/broad_dialog_text_hint_content"
        android:textColor="@color/dialog_text_dark"
        android:textSize="18.0sp" />

    <EditText
        android:id="@+id/barrage_edit_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/barrage_hint_text"
        android:layout_centerVertical="true"
        android:layout_marginTop="10.0dip"
        android:gravity="top"
        android:hint="@string/broad_dialog_text_hint_grey"
        android:lines="2" />

    <LinearLayout
        android:id="@+id/correct_buttonPanel"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/button_bar_height"
        android:layout_below="@id/barrage_edit_text"
        android:layout_marginTop="10.0dip"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="1.0dip" >

        <Button
            android:id="@+id/correct_cancel_btn"
            style="@style/ButtonStyle"
            android:layout_width="0.0dip"
            android:layout_height="52dip"
            android:layout_marginLeft="0.0dip"
            android:layout_marginRight="1.0dip"
            android:layout_weight="1.0"
            android:maxLines="2"
            android:text="@string/cancel_str" />

        <View
            android:id="@+id/view_divider1"
            android:layout_width="1.0dip"
            android:layout_height="20.0dip"
            android:background="@drawable/button_divider"
            android:visibility="gone" />

        <Button
            android:id="@+id/correct_ok_btn"
            style="@style/ButtonStyle"
            android:layout_width="0.0dip"
            android:layout_height="52dip"
            android:layout_marginLeft="1.0dip"
            android:layout_marginRight="1.0dip"
            android:layout_weight="1.0"
            android:maxLines="2"
            android:text="@string/confirm_send" />
    </LinearLayout>

</RelativeLayout>