<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
     <include
        android:id="@+id/device_top_bar"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_bar_height"
        layout="@layout/include_top_bar_device_add" />

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dip"
         android:gravity="center_vertical|center_horizontal"
         android:orientation="vertical"
         android:padding="@dimen/add_device_padding" >

         <TextView
             android:id="@+id/textView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/button_text_size"
             android:text="@string/please_wait_xiaoxin"
             android:textSize="@dimen/title_bar_title_text_size" />

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >

             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="3"
                 android:gravity="center_vertical|left"
                 android:text="@string/add_device_ssid"
                 android:textSize="18dip" />

             <EditText
                 android:id="@+id/input_ssid"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="@dimen/add_device_edit_left_padding"
                 android:layout_weight="1"
                 android:ems="10" />
         </LinearLayout>

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >

             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="3"
                 android:gravity="center_vertical|left"
                 android:text="@string/add_device_pwd"
                 android:textSize="18dip" />

             <EditText
                 android:id="@+id/input_pwd"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="@dimen/add_device_edit_left_padding"
                 android:layout_weight="1"
                 android:text=""
                 android:ems="10"
                 android:hint="@string/add_device_pwd_hint" />

         </LinearLayout>

         <LinearLayout
             
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >

             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="3"
                 android:gravity="center_vertical|left"
                 android:text="@string/add_device_sn"
                 
                 android:textSize="18dip" />

             <EditText
                 android:id="@+id/input_sn"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="@dimen/add_device_edit_left_padding"
                 android:layout_weight="1"
                 android:text=""
                 android:ems="10" >
                 
                 
             </EditText>

         </LinearLayout>

         <Button
             android:id="@+id/nextstep"
             android:layout_width="120dip"
             android:layout_height="wrap_content"
             android:background="@drawable/button_bg"
             android:text="下一步" />

     </LinearLayout>

</LinearLayout>