<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/setting_bg_color"
    android:orientation="vertical" >

    <include
        android:id="@+id/setting_top_bar_includer"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_bar_height"
        layout="@layout/setting_title_bar" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="15.0dip"
            android:paddingRight="15.0dip" >

            <LinearLayout style="@style/setting_item_layout" >

                <TextView
                    style="@style/setting_item_main_text"
                    android:layout_width="0.0dip"
                    android:layout_weight="1.0"
                    android:text="@string/gps_setting_title" />

                <CheckBox
                    android:id="@+id/gps_setting_switch"
                    style="@style/setting_item_checkbox" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="@dimen/main_setting_divider_height"
                android:background="@drawable/setting_list_divider" />

            <LinearLayout style="@style/setting_item_layout" >

                <TextView
                    style="@style/setting_item_main_text"
                    android:layout_width="0.0dip"
                    android:layout_weight="1.0"
                    android:text="@string/anim_setting_title" />

                <CheckBox
                    android:id="@+id/weather_anim_setting_switch"
                    style="@style/setting_item_checkbox" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="@dimen/main_setting_divider_height"
                android:background="@drawable/setting_list_divider" />

            <LinearLayout
                android:id="@+id/skin_setting_layout"
                style="@style/setting_item_layout"
                android:background="@drawable/preference_list_selector" >

                <LinearLayout
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:duplicateParentState="true"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/widget_theme_setting"
                        style="@style/setting_item_main_text"
                        android:drawablePadding="10.0dip"
                        android:text="@string/skin_setting_title" />
                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:duplicateParentState="true"
                    android:src="@drawable/setting_goto_bg" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="@dimen/main_setting_divider_height"
                android:background="@drawable/setting_list_divider" />

            <RelativeLayout
                android:id="@+id/wallpaper_setting_layout"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/setting_item_height"
                android:background="@drawable/setting_item_backround"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/wallpaper_setting_textView"
                    style="@style/setting_menu"
                    android:layout_centerVertical="true"
                    android:drawablePadding="10.0dip"
                    android:duplicateParentState="true"
                    android:text="@string/wallpaper_setting_title" />

                <include layout="@layout/setting_item_goto" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/main_setting_divider_height"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/setting_list_divider" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/background_setting_layout"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/setting_item_height"
                android:background="@drawable/setting_item_backround"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/background_setting_textView"
                    style="@style/setting_menu"
                    android:layout_centerVertical="true"
                    android:drawablePadding="10.0dip"
                    android:duplicateParentState="true"
                    android:text="@string/background_setting_title" />

                <include layout="@layout/setting_item_goto" />
            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="@dimen/main_setting_divider_height"
                android:background="@drawable/setting_list_divider" />

            <LinearLayout
                android:id="@+id/auto_update_setting_layout"
                style="@style/setting_item_layout"
                android:background="@drawable/preference_list_selector" >

                <TextView
                    style="@style/setting_item_main_text"
                    android:layout_width="0.0dip"
                    android:layout_weight="1.0"
                    android:text="@string/auto_update_setting_title" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:duplicateParentState="true"
                    android:src="@drawable/setting_goto_bg" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="@dimen/main_setting_divider_height"
                android:background="@drawable/setting_list_divider" />

            <RelativeLayout
                android:id="@+id/voice_alarm_setting_layout"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/setting_item_height"
                android:background="@drawable/setting_item_backround"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/voice_alarm_setting_textView"
                    style="@style/setting_menu"
                    android:layout_centerVertical="true"
                    android:drawablePadding="10.0dip"
                    android:duplicateParentState="true"
                    android:text="@string/voice_alarm" />

                <include layout="@layout/setting_item_goto" />
            </RelativeLayout>

            <View
                android:id="@+id/voice_alarm_setting_divider"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/main_setting_divider_height"
                android:background="@drawable/setting_list_divider"
                android:visibility="visible" />

            <LinearLayout
                android:id="@+id/notification_weather_setting_layout"
                style="@style/setting_item_layout"
                android:background="@drawable/preference_list_selector" >

                <LinearLayout
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:duplicateParentState="true"
                    android:orientation="vertical" >

                    <TextView
                        style="@style/setting_item_main_text"
                        android:text="@string/notification_weather_setting_title" />

                    <TextView
                        android:id="@+id/notification_weather_setting_sum"
                        style="@style/setting_item_sum_text" />
                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:duplicateParentState="true"
                    android:src="@drawable/setting_goto_bg" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="@dimen/main_setting_divider_height"
                android:background="@drawable/setting_list_divider" />

            <LinearLayout
                android:id="@+id/notification_alert_setting_layout"
                style="@style/setting_item_layout"
                android:background="@drawable/preference_list_selector" >

                <TextView
                    style="@style/setting_item_main_text"
                    android:layout_width="0.0dip"
                    android:layout_weight="1.0"
                    android:text="@string/notification_alert_setting_title" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:duplicateParentState="true"
                    android:src="@drawable/setting_goto_bg" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="@dimen/main_setting_divider_height"
                android:background="@drawable/setting_list_divider" />

            <LinearLayout
                android:id="@+id/life_info_setting_layout"
                style="@style/setting_item_layout"
                android:background="@drawable/preference_list_selector"
                android:visibility="gone" >

                <TextView
                    style="@style/setting_item_main_text"
                    android:layout_width="0.0dip"
                    android:layout_weight="1.0"
                    android:text="@string/life_info_setting_title" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:duplicateParentState="true"
                    android:src="@drawable/setting_goto_bg" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="@dimen/main_setting_divider_height"
                android:background="@drawable/setting_list_divider"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/check_update_setting_layout"
                style="@style/setting_item_layout"
                android:background="@drawable/preference_list_selector" >

                <LinearLayout
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:duplicateParentState="true"
                    android:orientation="vertical" >

                    <TextView
                        style="@style/setting_item_main_text"
                        android:text="@string/check_update_setting_title" />

                    <TextView
                        android:id="@+id/check_update_setting_sum"
                        style="@style/setting_item_sum_text"
                        android:text="@string/check_update_setting_sum" />
                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:duplicateParentState="true"
                    android:src="@drawable/setting_goto_bg" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="@dimen/main_setting_divider_height"
                android:background="@drawable/setting_list_divider" />

            <LinearLayout
                android:id="@+id/feedback_setting_layout"
                style="@style/setting_item_layout"
                android:background="@drawable/preference_list_selector" >

                <TextView
                    style="@style/setting_item_main_text"
                    android:layout_width="0.0dip"
                    android:layout_weight="1.0"
                    android:text="@string/feedback_setting_title" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:duplicateParentState="true"
                    android:src="@drawable/setting_goto_bg" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="@dimen/main_setting_divider_height"
                android:background="@drawable/setting_list_divider" />

            <LinearLayout
                android:id="@+id/about_setting_layout"
                style="@style/setting_item_layout"
                android:background="@drawable/preference_list_selector" >

                <TextView
                    style="@style/setting_item_main_text"
                    android:layout_width="0.0dip"
                    android:layout_weight="1.0"
                    android:text="@string/about_setting_title" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:duplicateParentState="true"
                    android:src="@drawable/setting_goto_bg" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="@dimen/main_setting_divider_height"
                android:background="@drawable/setting_list_divider" />

            <LinearLayout
                android:id="@+id/weather_source_setting_layout"
                style="@style/setting_item_layout"
                android:background="@drawable/preference_list_selector" >

                <TextView
                    style="@style/setting_item_main_text"
                    android:layout_width="0.0dip"
                    android:layout_weight="1.0"
                    android:text="@string/weather_source_setting_title" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:duplicateParentState="true"
                    android:src="@drawable/setting_goto_bg" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>